@@ -1,3 +1,3 @@
 #Build Number for ANT. Do not edit!
-#Tue Oct 07 21:50:45 CEST 2008
-build.number=88
+#Wed Oct 08 18:01:04 CEST 2008
+build.number=89
