@@ -1,5 +1,5 @@
 Application.id = FRD
-Application.version =
+Application.version =0.65
 Application.title = FreeRapid Downloader ${Application.version} - Vity 
 Application.vendor = Vity
 Application.vendorId = VitySoft
